# zombies-humans

./: CMakeLists.txt  README.md
headers/: City.h  GameSpecs.h  Human.h  Organism.h  Zombie.h
src/: City.cpp  Human.cpp  Organism.cpp  Zombie.cpp  main.cpp
